<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="about">About</string>
    <string name="app_name">Audio Recorder</string>
    <string name="audio_quality_high">High</string>
    <string name="audio_quality_normal">Normal</string>
    <string name="btn_stop_recording">Stop Recording</string>
    <string name="bug_report">Bug Report</string>
    <string name="button_delete_description">Delete Recording</string>
    <string name="button_rec_file_menu_description">Recording File Menu</string>
    <string name="button_rec_play_pause_description">Play/Pause Recording</string>
    <string name="button_record_description">Start/Pause Recording</string>
    <string name="button_stop_description">Stop Recording</string>
    <string name="by_wirehall">by <xliff:g id="organization_name">WIREHALL</xliff:g></string>
    <string name="close">Close</string>
    <string name="dialog_delete_message">Do you want to delete this recording? <xliff:g id="file_path">%1$s</xliff:g></string>
    <string name="dialog_delete_title">Are you sure?</string>
    <string name="disclaimer">This software is provided \"As Is\" and without any express or implied warranties. The risk of any loss, damage, or unsatisfactory performance of this software rests with you as the user</string>
    <string name="duration_in_min_sec_long">%d min, %d sec</string>
    <string name="duration_in_min_sec_short">%1$02d:%2$02d</string>
    <string name="duration_in_sec_long">%d sec</string>
    <string name="duration_progress_in_min_sec_short">%1$d:%2$02d/%3$d:%4$02d</string>
    <string name="et_hint_filename_input_dialog">Enter Filename Here</string>
    <string name="file_menu_option_delete"><xliff:g id="delete_symbol">✖ </xliff:g>Delete</string>
    <string name="file_menu_option_info"><xliff:g id="info_symbol">ⓘ </xliff:g>Info</string>
    <string name="file_menu_option_rename"><xliff:g id="rename_symbol">✍ </xliff:g>Rename</string>
    <string name="file_menu_option_share"><xliff:g id="share_symbol">✈ </xliff:g>Share</string>
    <string name="label_dev_name">Developer: <xliff:g id="developer_name">vivekweb2013</xliff:g></string>
    <string name="label_version">Version: <xliff:g example="1.3.0" id="version">%1$s</xliff:g></string>
    <string name="message_recording_fail_io_error">Recording Failed. Problem accessing storage. Please update storage path</string>
    <string name="message_recording_saved">Recording Saved Successfully!</string>
    <string name="message_recording_started">Recording Started</string>
    <string name="nav_drawer_close_description">Close Navigation Drawer</string>
    <string name="nav_drawer_open_description">Open Navigation Drawer</string>
    <string name="nav_header_subtitle_version" translatable="false">@string/versionName</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="pref_confirm_delete_summary">Show confirmation dialog when deleting file</string>
    <string name="pref_confirm_delete_title">Confirmation for Delete</string>
    <string name="pref_list_audio_quality_dialog_title">Select Audio Quality</string>
    <string name="pref_list_audio_quality_title">Recording Audio Quality</string>
    <string name="pref_path_new_folder">New Folder</string>
    <string name="pref_path_new_folder_dialog_title">New Folder Name</string>
    <string name="pref_recording_storage_path_title">Recording Path</string>
    <string name="pref_request_filename_summary">Request file name after completing the recording</string>
    <string name="pref_request_filename_title">Request Filename</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="progress_bar">Progress bar</string>
    <string name="rate">Rate</string>
    <string name="rate_dialog_info">If you enjoy using this app, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="recording_in_progress">Recording....</string>
    <string name="remind_me_later">Remind Me Later</string>
    <string name="settings">Settings</string>
    <string name="share_recording">Share Recording</string>
    <string name="source_code">Source Code</string>
    <string name="toast_folder_creation_failed">Failed to Create Folder: <xliff:g id="directory_path">%1$s</xliff:g></string>
    <string name="toast_recording_storage_path_updated">Storage Location is Updated</string>
    <string name="tv_file_info"><![CDATA[<b>Name: </b>%1$s<br /><b>Size: </b>%2$s<br /><b>Duration: </b>%3$s<br /><b>Path: </b>%4$s]]></string>
    <string name="tv_list_empty">No Recordings Found. Click Record Button to Start Recording</string>
    <string name="twitter_handle" translatable="false">"@vivekweb2013"</string>
    <string name="warn_stop_rec_to_play_audio">Can not play audio while recording. Stop recording first!</string>
</resources>
