...
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/distance_standard_dialog">

    <EditText
        android:id="@+id/et_filename_input_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/size_standard_min_height"
        android:ems="10"
        android:hint="@string/et_hint_filename_input_dialog"
        android:importantForAutofill="no"
...
        android:background="@color/colorPrimary"
        android:gravity="end"
        android:orientation="horizontal"
        tools:style="?attr/buttonBarStyle">

        <Button
            android:id="@+id/btn_filename_input_dialog_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distance_standard_dialog"
            android:layout_marginTop="@dimen/distance_standard_dialog"
            android:background="@color/colorPrimaryLight"
...
